fix: on check delete button row does not wrap

--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -82,7 +82,7 @@ body {
         width: max-content;
         background-color: #303030;
         .text-field {
-            margin-right: 7%;
+            margin-right: 5%;
         }
         .note {
             border-left: 3px solid crimson;
